fixed side menu spacing and titles

--- a/src/pages/InkController/SiderComponent/style.scss
+++ b/src/pages/InkController/SiderComponent/style.scss
@@ -76,6 +76,7 @@
     &__icons {
       margin-right: 23px;
       width: 20px;
+      vertical-align: bottom;
     }
     &__label {
       font-weight: 700;
